--- a/hw5-data-wrangling.Rmd
+++ b/hw5-data-wrangling.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Homework 5 - Data Analysis"
+title: "Homework 5 - Data Wrangling"
 output:
   html_document:
     number_sections: false
